# envycontrol

./: .gitignore  LICENSE  README.md  envs.py  envycontrol.py  flake.nix  main.go  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
doc/: envycontrol.8
envycontrol/: __main__.py  args.py  envs.py  envycontrol.py  logger.py  switcher.py
