[tool.poetry]
name = "envycontrol"
version = "3.3.1"
description = "Easy GPU switching for Nvidia Optimus laptops under Linux"
authors = ["Victor Bayas <victorsbayas@gmail.com>"]
readme = "README.md"
license = "MIT"

packages = [
  { include = "envycontrol" }
]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^69"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
envycontrol = "envycontrol.envycontrol:main"
